# Advent_of_Code

./: README.md
2024/01/: solve1.py  solve2.py
2024/02/: solve1.py  solve2.py
2024/03/: parsed.txt  solve1.py
2024/04/: solve1.py  solve2.py
2024/05/: solve1.py  solve2.py
2024/06/: solve1.py  solve2.py
2024/08/: solve1.py  solve2.py
2024/09/: solve1.py  solve2.py
2024/10/: solve1.py  solve2.py
2024/11/: solve1.py  solve2.py
2024/12/: solve1.py  solve2.py
2024/13/: data.txt  solve1.py  solve2.py
2024/14/: solve1.py  solve2.py
2024/15/: solve1.py  solve2.py
2024/18/: solve1.py
2025/: CMakeLists.txt
2025/01/: solve.cpp
2025/02/: solve.cpp
2025/03/: solve.cpp
2025/04/: solve.cpp
2025/05/: solve.cpp
2025/my_libs/: CMakeLists.txt  fileops.cpp  fileops.h  linkedlist.cpp  linkedlist.h  mathops.cpp  mathops.h
